--- a/styles/restaurant-profile.css
+++ b/styles/restaurant-profile.css
@@ -1,87 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ballet&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap'); */
 
-body{
-    background-color: darkgrey;
-    margin: 0;
+
+/* @import url('https://fonts.googleapis.com/css2?family=Ballet&display=swap'); */
+
+body {
+    background: linear-gradient(to top, #ba5370, #f4e2d8);
+    font-family: 'Bebas Neue', cursive;
 }
 
-#banner{
-    background-image: url("../assets/bg1.jpg");
-    background-position: center;
-    background-size: cover;
-    height: 50vh;
-    color:white;
+#base {
+    text-align: center;
+}
+
+#bannerName {
+    background-color: honeydew;
+    font-size: 30pt;
+}
+
+#tabs {
     display: grid;
-    grid-template-rows: 50% 12.5% 12.5% 12.5% 12.5%;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-#bannerName{
-    font-family: 'Ballet', cursive;
-    font-weight: 600;
-
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    transform: translateX(-15%) scaleX(1.3);
-    font-size: 4rem;
+#tab1 {
+    grid-column: 1;
 }
 
-#bannerSubtitle{
-    margin: auto;
-    transform: translateX(15%);
-    font-size: 1.5rem;
+#tab2 {
+    grid-column: 2;
 }
 
-#bannerReviews{
-    grid-row-start: 4;
-    margin: auto;
-    transform: translateX(30%);
-    font-size: 1rem;
-    display:grid;
-    grid-template-rows: auto auto;
-}
-#bannerReviews span{
-    display: block;
-    margin-left: auto;
+#tab3 {
+    grid-column: 3;
 }
 
-#tabs{
-    color: #bed7fa;
-    height: 10vh;
+#content {
     display: grid;
-    grid-template-columns: 11% 26% 26% 26% 11%;
-}
-#tab2{
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-.tabButtons{
-    font-family: 'Orbitron', sans-serif;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20%;
-    padding-right: 20%;
-    font-size: 2rem;
-    border-left:  3px solid #5d8fd4;
-    border-right: 3px solid #5d8fd4;
-}
-
-#content{
-    margin-left: 11%;
-    margin-right: 11%;
-    display: grid;
-    grid-template-columns: 100% 0% 0%;
-}
-
-#content1{
-    visibility: visible;
-    
-}
-#content2{
+#content1 {
+    grid-column: 1;
     visibility: hidden;
 }
-#content3{
+
+#content2 {
+    grid-column: 2;
+    visibility: hidden;
+}
+
+#content3 {
+    grid-column: 3;
     visibility: hidden;
 }
